--- a/configs/stable-diffusion/sd-image-condition-finetune.yaml
+++ b/configs/stable-diffusion/sd-image-condition-finetune.yaml
@@ -9,7 +9,7 @@ model:
     timesteps: 1000
     first_stage_key: "image"
     cond_stage_key: "condition"
-    image_size: 84
+    image_size: 64
     channels: 4
     cond_stage_trainable: true # we will freeze the network but add additional linear layer to map vector to desired shape for unet 
     conditioning_key: crossattn
@@ -28,7 +28,7 @@ model:
     unet_config:
       target: ldm.modules.diffusionmodules.openaimodel.UNetModel
       params:
-        image_size: 84
+        image_size: 64
         in_channels: 4
         out_channels: 4
         model_channels: 320
@@ -51,7 +51,7 @@ model:
         ddconfig:
           double_z: true
           z_channels: 4
-          resolution: 84
+          resolution: 256
           in_channels: 3
           out_ch: 3
           ch: 128
@@ -76,19 +76,19 @@ model:
 data:
   target: main.DataModuleFromConfig
   params:
-    batch_size: 2
+    batch_size: 8
     num_workers: 2
     num_val_workers: 0 # Avoid a weird val dataloader issue
     train:
       target: ldm.loader.miniimagenet.MiniImageNetTrain
       params:
         root: ./data/miniimagenet
-        image_size: 84
+        image_size: 64
     validation:
       target: ldm.loader.miniimagenet.MiniImageNetVal
       params:
         root: ./data/miniimagenet
-        image_size: 84
+        image_size: 64
 
 
 lightning:
@@ -115,6 +115,8 @@ lightning:
 
   trainer:
     benchmark: True
-    val_check_interval: 5000000 # really sorry
-    num_sanity_val_steps: 0
+    limit_val_batches: 0.0
+    # val_check_interval: 5000000 # really sorry
+    num_sanity_val_steps: 1
     accumulate_grad_batches: 1
+    # gpus: 0,
