--- a/configs/stable-diffusion/sd-image-condition-finetune.yaml
+++ b/configs/stable-diffusion/sd-image-condition-finetune.yaml
@@ -8,10 +8,10 @@ model:
     log_every_t: 200
     timesteps: 1000
     first_stage_key: "image"
-    cond_stage_key: "condition"
+    cond_stage_key: "image"
     image_size: 64
     channels: 4
-    cond_stage_trainable: true # we will freeze the network but add additional linear layer to map vector to desired shape for unet 
+    cond_stage_trainable: false # false for clip # we will freeze the network but add additional linear layer to map vector to desired shape for unet 
     conditioning_key: crossattn
     monitor: val/loss_simple_ema
     scale_factor: 0.18215
@@ -28,7 +28,7 @@ model:
     unet_config:
       target: ldm.modules.diffusionmodules.openaimodel.UNetModel
       params:
-        image_size: 64
+        image_size: 256
         in_channels: 4
         out_channels: 4
         model_channels: 320
@@ -68,28 +68,56 @@ model:
 
     # adjust dim and encoder
     cond_stage_config:
-      #target: ldm.modules.encoders.modules.FrozenCLIPImageEmbedder
-      target: ldm.modules.encoders.modules.FrozenResNetImageEmbedder
+      target: ldm.modules.encoders.modules.FrozenCLIPImageEmbedder
+      # target: ldm.modules.encoders.modules.FrozenResNetImageEmbedder
       # ckpt_path: models/embedder/rfs.pth
       # num_classes: 64
+
+
+#data:
+ # target: main.DataModuleFromConfig
+  #params:
+   # batch_size: 4
+    #num_workers: 2
+    #num_val_workers: 0 # Avoid a weird val dataloader issue
+    #train:
+     # target: ldm.loader.miniimagenet.MiniImageNetTrain
+      #params:
+       # root: ./data/miniimagenet
+        #image_size: 64
+    #validation:
+     # target: ldm.loader.miniimagenet.MiniImageNetVal
+      #params:
+       # root: ./data/miniimagenet
+        #image_size: 64
 
 data:
   target: main.DataModuleFromConfig
   params:
-    batch_size: 8
+    batch_size: 4
     num_workers: 2
     num_val_workers: 0 # Avoid a weird val dataloader issue
     train:
-      target: ldm.loader.miniimagenet.MiniImageNetTrain
+      target: ldm.loader.simple.FolderData
       params:
-        root: ./data/miniimagenet
-        image_size: 64
+        root_dir: ../datasets/mini_imagenet_256_train/
+        ext: jpg
+        image_transforms:
+        - target: torchvision.transforms.Resize
+          params:
+            size: 256
+            interpolation: 3
+        - target: torchvision.transforms.RandomHorizontalFlip
     validation:
-      target: ldm.loader.miniimagenet.MiniImageNetVal
+      target: ldm.loader.simple.FolderData
       params:
-        root: ./data/miniimagenet
-        image_size: 64
-
+        root_dir: ../datasets/mini_imagenet_256_val/
+        ext: jpg
+        image_transforms:
+        - target: torchvision.transforms.Resize
+          params:
+            size: 256
+            interpolation: 3
 
 lightning:
   find_unused_parameters: false
@@ -101,15 +129,15 @@ lightning:
       target: main.ImageLogger
       params:
         batch_frequency: 1000
-        max_images: 8
+        max_images: 4
         increase_log_steps: False
         log_first_step: True
         log_images_kwargs:
-          use_ema_scope: False
+          use_ema_scope: True
           inpaint: False
-          plot_progressive_rows: False
+          plot_progressive_rows: True
           plot_diffusion_rows: False
-          N: 8
+          N: 4
           unconditional_guidance_scale: 3.0
           unconditional_guidance_label: [""]
 
@@ -119,4 +147,5 @@ lightning:
     # val_check_interval: 5000000 # really sorry
     num_sanity_val_steps: 1
     accumulate_grad_batches: 1
+    max_steps: 50000
     # gpus: 0,
